module9/bookmanager-deployment/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmanager-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-security-groups: "sg-030115f1362251a1e"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: bookmanager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
