module9/bookmanager-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmanager-service
spec:
  type: NodePort
  selector:
    app: bookmanager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
