module9/bookmanager-deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmanager-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: bookmanager-service
      port:
        number: 80
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bookmanager-service
              port:
                number: 80
